--- a/style.css
+++ b/style.css
@@ -156,30 +156,30 @@ footer {
 }
 .tabindex {
 	box-shadow: 8px 0 0 0 #555555,
-				0 8px 0 0 #555555,
-				4px 4px 0 0 #555555,
-			    -8px 0 0 0 #e8e8e8,
-				0 -8px 0 0 #e8e8e8,
-				-4px -4px 0 0 #e8e8e8,
-				0 0 0 4px #b5b4b5,
-				4px 8px 0 0 #555,
-				8px 4px 0 0 #555,
-				-4px -8px 0 0 #e8e8e8,
-				-8px -4px 0 0 #e8e8e8,
-				8px -4px 0 0 #000,
-				4px -8px 0 0 #000,
-				-8px 4px 0 0 #000,
-				-4px 8px 0 0 #000,
-				-12px -12px 0 0 #000,
-				8px 8px 0 0 #000,
-				-12px 0 0 0 #000,
-				-12px -3px 0 0 #000,
-				12px 0 0 0 #000,
-				12px 4px 0 0 #000,
-				0 -12px 0 0 #000,
-				-4px -12px 0 0 #000,
-				0 12px 0 0 #000,
-				4px 12px 0 0 #000;
+    0 8px 0 0 #555555,
+    4px 4px 0 0 #555555,
+       -8px 0 0 0 #fff,
+    0 -8px 0 0 #fff,
+    -4px -4px 0 0 #fff,
+    0 0 0 4px #b5b4b5,
+    4px 8px 0 0 #555,
+    8px 4px 0 0 #555,
+    -4px -8px 0 0 #fff,
+    -8px -4px 0 0 #fff,
+    8px -4px 0 0 #000,
+    4px -8px 0 0 #000,
+    -8px 4px 0 0 #000,
+    -4px 8px 0 0 #000,
+    -12px -12px 0 0 #000,
+    8px 8px 0 0 #000,
+    -12px 0 0 0 #000,
+    -12px -3px 0 0 #000,
+    12px 0 0 0 #000,
+    12px 4px 0 0 #000,
+    0 -12px 0 0 #000,
+    -4px -12px 0 0 #000,
+    0 12px 0 0 #000,
+    4px 12px 0 0 #000;
 	width: 96vw;
 	height: 100px;
 	background-color: #C6C6C6;
